KSENROLL-12135:Fix for layout issue in confirmation box of Registration.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@66968 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/global_styles/base.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/global_styles/base.less
@@ -45,6 +45,7 @@ input:-moz-placeholder {
      margin:0 auto;
      overflow:auto;
      padding-top:50px;
+     margin-top: -0.35em;
 
 }
 
